Fixed video cropping display and snapshots in camera.js

--- a/static/style.css
+++ b/static/style.css
@@ -97,7 +97,7 @@ body {
 
 .content {
     flex: 1;
-    background-color: #aac0b0
+    background-color: #aac0b0;
 }
 
 .content-home {
